[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoeq"
version = "0.0.3"
description = "A Python library for geotechnical engineering calculations."
readme = "README.md"

requires-python = ">=3.9"
authors = [
    {name = "Ripon Chandra Malo"},
]
keywords = [
    "geoeq",
    "geotechnical",
    "soil mechanics",
    "civil engineering",
    "geotechnical engineering",
    "soil properties",
    "geotechnical interpretation",
    "geotechnical formulas",
    "bearing capacity",
    "foundation",
    "settlement",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://geoeq.github.io"
Documentation = "https://geoeq.github.io"
Repository = "https://github.com/geoeq/geoeq"
Changelog = "https://geoeq.github.io/blog"
Issues = "https://github.com/geoeq/geoeq/issues"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geoeq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
