[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoeq"
version = "0.1.2"
description = "A clean, validated Python library for the complete onshore geotechnical workflow — lab tests, site investigation, design, dynamics, and data exchange."
readme = "README.md"
license = {text = "Apache-2.0"}

requires-python = ">=3.9"
authors = [
    {name = "Ripon Chandra Malo", email = "hello@matily.org"},
]
maintainers = [
    {name = "Ripon Chandra Malo", email = "hello@matily.org"},
]
keywords = [
    "geoeq",
    "geotechnical",
    "soil mechanics",
    "civil engineering",
    "geotechnical engineering",
    "soil properties",
    "geotechnical interpretation",
    "geotechnical formulas",
    "soil classification",
    "USCS",
    "AASHTO",
    "Atterberg limits",
    "direct shear",
    "triaxial",
    "Mohr circle",
    "Proctor compaction",
    "oedometer",
    "consolidation",
    "permeability",
    "CBR",
    "bearing capacity",
    "foundation",
    "settlement",
    "SPT",
    "CPT",
    "pressuremeter",
    "plate load test",
    "vane shear",
    "pile load test",
    "DCP",
    "slug test",
    "pumping test",
    "site investigation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Education",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "twine",
]

[project.urls]
Homepage      = "https://geoeq.github.io"
Documentation = "https://geoeq.github.io/user-guide.html"
Repository    = "https://github.com/geoeq/geoeq"
Issues        = "https://github.com/geoeq/geoeq/issues"
Changelog     = "https://github.com/geoeq/geoeq/blob/main/CHANGELOG.md"
Source        = "https://github.com/geoeq/geoeq"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geoeq = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
